Title has changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  	<link rel="stylesheet" type="text/css" media="screen" href="./style.css">
   	<style type="text/css"></style>
-	<title>Mój pierwszy projekt</title>
+	<title>Moje portfolio</title>
 </head>
 <body>
 	<div class="main-wrapper">
